--- a/sample.html
+++ b/sample.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noby API Test</title>
+    <script src="noby-ciant.js"></script>
 </head>
 
 <body>
@@ -19,12 +20,6 @@
     <pre id="response"></pre>
 
     <script>
-        class NobyAPI {
-            // ... [NobyAPIクラスのコード]
-
-            // こちらにNobyAPIクラスのコードをコピーしてください
-        }
-
         const appKey = "YOUR_APP_KEY"; // こちらに実際のappKeyを入力してください
         const api = new NobyAPI(appKey);
 
